# gogo

./: .envsample  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: rust.yml
src/: db.rs  main.rs  runner.rs
