[package]
name = "gogo"
version = "1.0.1"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2021"
description = "A mnemonic terminal url opener"
homepage = "https://github.com/vihu/gogo"
repository = "https://github.com/vihu/gogo"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
rocksdb = "0.17.0"
url = "2.2.2"
colored = "2.0.0"
prettytable-rs = "0.8.0"
anyhow = "1.0.51"
csv = "1"
serde = { version = "1", features = ["derive"] }
