[package]
name = "gogo"
version = "2.0.1"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2021"
description = "A mnemonic terminal url opener"
homepage = "https://github.com/vihu/gogo"
repository = "https://github.com/vihu/gogo"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
anyhow = "1"
rusqlite = "0"
clap = { version = "4.0.15", features = ["derive"] }
tabled = "0"
csv = "1"
serde = {version = "1", features = ["derive"]}
serde_trim = "0"
